package com.directi.training.ocp.exercise;

public class SpaceSlot extends Resource{
    @Override
    public int findFree() {
        return 0;
    }

    @Override
    public void markBusy(int resourceId) {

    }

    @Override
    public void markFree(int resourceId) {

    }
}
